fixed left side not showing up

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,100 +1,110 @@
-.mainline{
-    width: 10px;
-
-    background-color: black;
-    display: inline-block;
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+.middle-line{
+  height:100%;
+    width:5px;
+    background:black;
+    margin:0px auto;
     position: absolute;
-    top: 0;
-    bottom:-100%;
     left: 50%;
-
+    transform: translateX(-50%)
 }
-
 .left{
-    background-color: whitesmoke;
-    border: 5px black;
-    height:350px;
-    width:300px;
-    clear: both;
-    margin-left 5%;
-    transition:3s;
-
- }
-
-
-
-
+  background-color: whitesmoke;
+  border: 2px solid black;
+  height: 175px;
+  width: 300px;
+  clear: both;
+  margin-left:7%;
+  transition: 3s;
+  border-radius: 4px;
+   -webkit-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.36);
+   box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.36);
+}
 .right{
-    background-color: whitesmoke;
-    border: 5px black;
-    float:right;
-    height:350px;
-    width:300px;
-    clear: both;
-    transition: 3s;
-
-
- }
-
-/*#.third-box{*/
-
-    /*background-color: whitesmoke;*/
-    /*border: 5px black;*/
-    /*height:350px;*/
-    /*width:300px;*/
-    /*clear: both*/
-
-/*}*/
-
-main {
-    max-width: 80%;
+  /*background: "dog.jpg"*/
+  background-color: whitesmoke;
+  border: 2px solid black;
+  height: 175px;
+  width: 300px;
+  float: right;
+  clear:both;
+  margin-right: 7%;
+  transition: 3s;
+  border-radius: 4px;
+   -webkit-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.36);
+   box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.36);
+}
+main{
+  height: 800px;
+    width: 80%;
     margin: 0 auto;
-    background-color:slategray;
-
-
+    background-color: powderblue;
+    /*overflow: auto;*/
+    position: relative;
 }
- .left::after{
-     content: " ";
-     height: 0;
-     width: 0;
-     border-left: solid 10px white;
-     border-top: solid 10px transparent;
-     border-bottom: solid 10px transparent;
-     position: absolute;
-        top: 10px;
-        right: -5%;
- }
-
- .right:after{
-     content: " ";
-     height: 0;
-     width: 0;
-     border-right: solid 10px red;
-     border-top: solid 10px transparent;
-     border-bottom: solid 10px transparent;
-     position: absolute;
-        top: 10px;
-        left: -5%;
- }
- 
- div {
-     position: relative;
- }
-
-
-
-
+.left::after{
+  content: " " ;
+  height: 0;
+  width: 0;
+  border-left: solid 10px white;
+  border-top: solid 10px transparent;
+  border-bottom: solid 10px transparent;
+  position: absolute;
+    top: 10%;
+    right:-5%;
+}
+.right::after{
+  content: " " ;
+  height: 0;
+  width: 0;
+  border-right: solid 10px white;
+  border-top: solid 10px transparent;
+  border-bottom: solid 10px transparent;
+  position: absolute;
+    top: 10%;
+    left:-5%;
+}
+.title{
+  color:black;
+  font-size: 25px;
+  margin:10px;
+}
+.dog{
+  height:80px;
+  width: 300px;
+}
+.button{
+  background-color: #00608E;
+  padding: 5px 10px;
+  margin:5px 10px;
+}
+div{
+  position: relative;
+}
 .left:hover {
- /*float: right;*/
- background-color: red;
-
+  background-color: greenyellow;
 }
-
 .right:hover {
- /*float: left;*/
- background-color: red;
+  background-color: greenyellow;
 }
-
-/*.right{*/
-    /*transition: 3s;  */
-/*}*/
+.date_right {
+    top: 0;
+    float:right;
+    background-color: red;
+    color: white;
+    width: 30%;
+    border:1px solid black;
+}
+.date_left{
+  top:0;
+  left:0;
+  background-color: red;
+  color: white;
+   width: 30%;
+  border:1px solid black;
+}
